# mage_externals

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  install_all.bat
gtest/: CMakeLists.txt  install.bat.in
