PROJECT(MAGE_Externals)

CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

SET(EXTERNAL_PROJECT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
SET(MAGE_ROOT_DIR "${EXTERNAL_PROJECT_DIR}/..")

INCLUDE(${MAGE_ROOT_DIR}/cmake/common.cmake)
INCLUDE(${MAGE_ROOT_DIR}/cmake/platform.cmake)
INCLUDE(${MAGE_ROOT_DIR}/cmake/compiler.cmake)

SET(MAGE_BIN_DIR "${MAGE_ROOT_DIR}/gfl/lib/${MAGE_PLATFORM_NAME}")
SET(EXTERNAL_VS_FOLDER_PREFIX "")

ADD_SUBDIRECTORY(gtest)
