PROJECT(MAGE_Externals)

CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

SET(EXTERNAL_PROJECT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")

SET(EXTERNAL_INSTALL_DIR "${MAGE_INSTALL_DIR}/")
SET(EXTERNAL_OUTPUT_DIR "${MAGE_INSTALL_DIR}/lib/${MAGE_PLATFORM_NAME}")
SET(EXTERNAL_VS_FOLDER_PREFIX "")

ADD_SUBDIRECTORY(gtest)
