
SET(GOOGLETEST_MAJOR_VERSION 1)
SET(GOOGLETEST_MINOR_VERSION 8)
SET(GOOGLETEST_PATCH_VERSION 0)
SET(GOOGLETEST_VERSION ${GOOGLETEST_MAJOR_VERSION}.${GOOGLETEST_MINOR_VERSION}.${GOOGLETEST_PATCH_VERSION})

SET(GOOGLETEST_PROJECT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src/googletest")
SET(GOOGLETEST_OUTPUT_DIR "${MAGE_BIN_DIR}")
SET(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
SET(gtest_disable_pthreads ON CACHE BOOL "" FORCE)
SET(gtest_force_shared_crt ON CACHE BOOL "" FORCE)

CONFIGURE_FILE(
	${CMAKE_CURRENT_SOURCE_DIR}/install.bat.in
	${CMAKE_CURRENT_SOURCE_DIR}/install.bat
)

MESSAGE(${CMAKE_BINARY_DIR})
ADD_SUBDIRECTORY(${GOOGLETEST_PROJECT_DIR} "${CMAKE_CURRENT_BINARY_DIR}/googletest")

SET_TARGET_PROPERTIES(gtest PROPERTIES
	ARCHIVE_OUTPUT_DIRECTORY ${GOOGLETEST_OUTPUT_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${GOOGLETEST_OUTPUT_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${GOOGLETEST_OUTPUT_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${GOOGLETEST_OUTPUT_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL ${GOOGLETEST_OUTPUT_DIR}
	OUTPUT_NAME gtest${MAGE_OUTPUT_SUFFIX}
	FOLDER "${EXTERNAL_VS_FOLDER_PREFIX}/googletest"
)